# ChangeLog for media-sound/herrie
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/herrie/ChangeLog,v 1.29 2008/06/19 11:50:12 opfer Exp $

  19 Jun 2008; Christian Faulhammer <opfer@gentoo.org> herrie-2.0.2.ebuild:
  stable x86, bug 227107

  16 Jun 2008; Friedrich Oslage <bluebird@gentoo.org> herrie-2.0.2.ebuild:
  sparc stable, bug #227107

  16 Jun 2008; nixnut <nixnut@gentoo.org> herrie-2.0.2.ebuild:
  Stable on ppc wrt bug 227107

  15 Jun 2008; Santiago M. Mola <coldwind@gentoo.org> herrie-2.0.2.ebuild:
  amd64 stable wrt bug #227107

  26 Apr 2008; nixnut <nixnut@gentoo.org> herrie-2.0.ebuild:
  Stable on ppc wrt bug 218645

*herrie-2.0.2 (23 Apr 2008)

  23 Apr 2008; Robert Buchholz <rbu@gentoo.org> -herrie-2.0.1.ebuild,
  +herrie-2.0.2.ebuild:
  Version bump, bug fixes for the ALSA volume manager.

  22 Apr 2008; Raúl Porcel <armin76@gentoo.org> herrie-2.0.ebuild:
  x86 stable wrt #218645

  20 Apr 2008; Robert Buchholz <rbu@gentoo.org> herrie-2.0.ebuild:
  amd64 stable, bug 218645

*herrie-2.0.1 (20 Apr 2008)

  20 Apr 2008; Robert Buchholz <rbu@gentoo.org> -herrie-1.9.2.ebuild,
  +herrie-2.0.1.ebuild:
  Version bump, introducing ALSA volume support (thanks to armin76 for
  notifying).

*herrie-2.0 (16 Mar 2008)

  16 Mar 2008; Robert Buchholz <rbu@gentoo.org> herrie-1.8.3.ebuild,
  herrie-1.9.2.ebuild, +herrie-2.0.ebuild:
  Version bump, adding Chinese and Portuguese translation and bugfixes.
  Unquote $A, thanks repoman.

*herrie-1.9.2 (20 Jan 2008)

  20 Jan 2008; Robert Buchholz <rbu@gentoo.org>
  -files/herrie-1.5.1-chost.patch, -herrie-1.7-r1.ebuild,
  -herrie-1.8.1.ebuild, +herrie-1.9.2.ebuild:
  Version bump, introducing directory search, new translations, and bug fixes.
  Clean up old versions.

  27 Oct 2007; nixnut <nixnut@gentoo.org> herrie-1.8.3.ebuild:
  Stable on ppc wrt bug 196074
