@@ -1,9 +1,9 @@
 AUX herrie-1.8-chost.patch 547 RMD160 77f7506ee0b3f4eceeeb3b43a020086fba6739ac SHA1 89c2200eeb55a2c56f83c0ad67ebe371e559a7b6 SHA256 07371e7b5feff1f2b9a1cce1875be9def54c478084f2635a30bdcc8e6333f2f2
-DIST herrie-1.8.3.tar.bz2 62786 RMD160 68ae1977988d4912e549a6519c3b28f79b8f08ea SHA1 580e7154e2670402f18f1d4502e9460a3c5dfeba SHA256 d4746b136b59b31715461d436292da3bbd6b3a8c814f6fa897e4c229aaa465f8
 DIST herrie-2.0.2.tar.bz2 69971 RMD160 e91ae93d54ce8039828fb24a1a56ad691de6ed73 SHA1 0d3bffb5fa592945995ab34d0611f563a9bae100 SHA256 f2d8286c802f089bc7b5c5557e2097be6c10add72c982b55bf491ac32c30708b
 DIST herrie-2.0.tar.bz2 69438 RMD160 f53ed76f578ad92a6146fe2a19c5b6a4decf35a6 SHA1 560b8dc591e0f2d5e84ae33843e42fe726dd828e SHA256 b54ae23122c362d7d083a0069d261aaa47602e23ae924bf6e71e5156f1c8d210
-EBUILD herrie-1.8.3.ebuild 2586 RMD160 e6dc56b5d41a943b158159320adaa486f8095818 SHA1 83847d80970dbe1206b349a9c0b95587a5d5a9a1 SHA256 97fdeff36c656f5d0d71c07a6cfac0cfae39887aad0b4964d041ca4298e8d3c9
+DIST herrie-2.1.tar.bz2 70592 RMD160 638561a51aad2ee46a5915dc0ff921e5468218d3 SHA1 da9f0838826954066abe9900e618ed8ad4da85ca SHA256 7a581c423d92e7bfde5c4795fc04ef7061f4368ad3c55ea281ff1b8ac9be0598
 EBUILD herrie-2.0.2.ebuild 2656 RMD160 f5ca9e07d96af936f4849cf274a51ca9efa65102 SHA1 160e2d9cea4978ea8a439c88ea9a9ed68b18c405 SHA256 559c7ff4cfb82eb20de6631a1aa069f451d16a16c9a7fa9f6674e4c0f80dd55e
 EBUILD herrie-2.0.ebuild 2656 RMD160 694530ece35d478928be26642c560c75b854fd5e SHA1 8358522eac712d400a850c7d9777c2dba53a1664 SHA256 f9a18f5b9ef1c26061b48a09716bbecd1c17520a82677b4a4b9edb1fb9f89cc3
-MISC ChangeLog 4546 RMD160 cd33bef801e1387bdc35d086567bb4773dfd8ed8 SHA1 660c1daae11b6e79facc1f398161cd6b2c30c609 SHA256 01414542272fbb07ef7c13b1f5401ade483d2fb74dea7aad7c3d19b02dbb2700
+EBUILD herrie-2.1.ebuild 2656 RMD160 6f590a3380dda59d4a53f9bbeb4a1853fe399b3f SHA1 28bb82fb572a29b37c94b240780e511ed0c9be78 SHA256 bd8c3de6a574e8e491488c3558972f94d4ae3b58776b95af87a71b2ab0d52ec5
+MISC ChangeLog 4861 RMD160 633f658f0f601a2cb62671c8a7ecc4a8d72cc2b8 SHA1 a28fc0429738f6eaa20554c568d25e4145f27f53 SHA256 d03524cdbe44e208afc059f37fd1f46655871ae2903699a042e5c4447f3b0cd2
 MISC metadata.xml 1067 RMD160 785c43394547d03304aeaf6957e8b101508c5d20 SHA1 6fde495a04cfed75319b2d8d99b8bbc93d418598 SHA256 b12095da84b5e1012a64c3f6f957e110ede9928bee3f50022aad88a524b90973
